--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -708,7 +708,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="/Users/karina/.config/neofetch/akaia-logo--80x80.txt"
+image_source="auto"
 
 # Ascii Options
 
