--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -22,11 +22,11 @@ print_info() {
     info "GPU" gpu
     info "Memory" memory
 
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
+    info "GPU Driver" gpu_driver  # Linux/macOS only
+    info "CPU Usage" cpu_usage
     info "Disk" disk
     # info "Battery" battery
-    # info "Font" font
+    info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     info "Local IP" local_ip
@@ -526,7 +526,7 @@ mpc_args=()
 # Example:
 # colors=(distro)      - Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(distro)
+colors=(4 6 1 8 8 6)
 
 
 # Text Options
@@ -694,7 +694,7 @@ disk_display="on"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="ascii"
+image_backend="off"
 
 # Image Source
 #
@@ -708,7 +708,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+# image_source="auto"
 
 # Ascii Options
 
@@ -759,7 +759,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="auto"
+# ascii_distro="macos_small"
 
 # Ascii Colors
 #
