--- a/.config/macchina/themes/astatine.toml
+++ b/.config/macchina/themes/astatine.toml
@@ -1,57 +1,57 @@
-hide_ascii      = false
-spacing         = 1
-padding         = 0
-separator       = ""
-key_color       = "LightCyan"
+hide_ascii = false
+spacing = 1
+padding = 0
+separator = ""
+key_color = "LightCyan"
 separator_color = "Yellow"
 
 [bar]
-glyph           = " "
-symbol_open     = "("
-symbol_close    = ")"
+glyph = " "
+symbol_open = "("
+symbol_close = ")"
 hide_delimiters = false
-visible         = false
+visible = false
 
 [box]
-title           = " astatine "
-border          = "rounded"
-visible         = false
+title = " astatine "
+border = "rounded"
+visible = false
 
 [box.inner_margin]
-x               = 2
-y               = 1
+x = 2
+y = 1
 
 [custom_ascii]
-color           = "#BB90B7"
-path            = "~/.config/macchina/themes/ubuntu-small.ascii"
+color = "#f1fa8c"
+path = "~/.config/macchina/themes/akaia.ascii"
 
 [randomize]
-key_color       = false
+key_color = false
 separator_color = false
 
 [palette]
-type            = "Dark"
-visible         = true
-glyph           = "   "
+type = "Dark"
+visible = true
+glyph = "   "
 
 [keys]
-host            = "  host"
-kernel          = "󰌽  kernel"
-battery         = "󰁹  battery"
-os              = "  os"
-de              = "  de"
-wm              = "  wm"
-distro          = "  distro"
-terminal        = "  terminal"
-shell           = "  shell"
-packages        = "  packages"
-uptime          = "󰥔  uptime"
-memory          = "  memory"
-machine         = "󰇅  machine"
-local_ip        = "󰱓  ip"
-backlight       = "󰃞  brightness"
-resolution      = "󰍺  resolution"
-cpu_load        = "󰊚  cpu load"
-cpu             = "  cpu"
-gpu             = "󰈐  gpu"
-disk_space      = "  disk space"
+host = "  host"
+kernel = "󰌽  kernel"
+battery = "󰁹  battery"
+os = "  os"
+de = "  de"
+wm = "  wm"
+distro = "  distro"
+terminal = "  terminal"
+shell = "  shell"
+packages = "  packages"
+uptime = "󰥔  uptime"
+memory = "  memory"
+machine = "󰇅  machine"
+local_ip = "󰱓  ip"
+backlight = "󰃞  brightness"
+resolution = "󰍺  resolution"
+cpu_load = "󰊚  cpu load"
+cpu = "  cpu"
+gpu = "󰈐  gpu"
+disk_space = "  disk space"
