--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,5 +1,5 @@
 [tools]
-rust = "nightly-2024-05-24"
+rust = "nightly-2024-09-23"
 node = "latest"
 deno = "latest"
 erlang = "27.0"
@@ -7,3 +7,5 @@ elixir = "latest"
 gleam = "1.2.1"
 rebar = "latest"
 python = "latest"
+bun = "1.1.29"
+go = "latest"
