--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 !.config/shell.nu
 !.config/mise/*
 !.local/bin/dlfox.fish
+!.nix-defexpr/default.nix
+!.config/fish/config.fish
+!.config/fish/fish_variables
