--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -50,14 +50,14 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "mem net proc cpu"
+shown_boxes = "mem proc cpu net"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 500
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "cpu direct"
+proc_sorting = "memory"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -208,7 +208,7 @@ net_auto = True
 net_sync = True
 
 #* Starts with the Network Interface specified here.
-net_iface = ""
+net_iface = "enP3p3s0f0"
 
 #* Show battery stats in top right if battery is present.
 show_battery = True
